--- a/_columns/Stock_Of_the_Day/2024-11-08.md
+++ b/_columns/Stock_Of_the_Day/2024-11-08.md
@@ -107,7 +107,7 @@ In October, Waymo closed a $5.6 billion funding round, including Google and prev
 [Catch The Next Big Winning Stock With MarketSurge](https://www.investors.com/product/marketsmith/?artProdLink=MarketSmith)
 
 
-[Trump Rally Runs On; Five Stocks Near Buy Points](https://www.investors.com/market-trend/stock-market-today/trump-rally-runs-on-tesla-palantir-fly-nvidia-meta-buy-points/)
+[Trump Rally: Bitcoin Soars, 5 Stocks Near Buy Points](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-bitcoin-80000-trump-rally-nvidia-meta-buy-points/)
 
 
 
