--- a/_columns/The_Big_Picture/2024-11-08.md
+++ b/_columns/The_Big_Picture/2024-11-08.md
@@ -90,7 +90,7 @@ On the flip side, TV stocks, computer networking plays, solar energy companies a
 [This Is The Ultimate Warren Buffett Stock, But Should You Buy It?](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
 
 
-[Trump Rally Runs On; Five Stocks Near Buy Points](https://www.investors.com/market-trend/stock-market-today/trump-rally-runs-on-tesla-palantir-fly-nvidia-meta-buy-points/)
+[Trump Rally: Bitcoin Soars, 5 Stocks Near Buy Points](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-bitcoin-80000-trump-rally-nvidia-meta-buy-points/)
 
 
 
