--- a/_columns/The_Big_Picture/zh-cn/2024-11-04.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-04.md
@@ -62,7 +62,7 @@ Monday's action also highlighted a test of support at the S&P 500's rising 50-da
 
 
 The Dow Jones Industrial Average lost the most among the major stock market indexes, down 0.6%. Perhaps surprising some investors, blue chips in the banking and financial sectors led the downside. **JPMorgan Chase** ([JPM](https://research.investors.com/quote.aspx?symbol=JPM)) and **Travelers** ([TRV](https://research.investors.com/quote.aspx?symbol=TRV)) in the Dow Jones both dropped more than 1%. Both components also took out their 21-day lines.  
-道琼斯工业平均指数在主要股市指数中跌幅最大，下跌 0.6%。也许让一些投资者感到惊讶的是，银行和金融行业的蓝筹股领跌。道琼斯指数的**摩根大通** （[JPM](https://research.investors.com/quote.aspx?symbol=JPM)） 和**旅行者** （[TRV](https://research.investors.com/quote.aspx?symbol=TRV)） 均下跌超过 1%。这两个组件也都取消了他们的 21 天线。
+道琼斯工业平均指数在主要股市指数中跌幅最大，下跌 0.6%。也许让一些投资者感到惊讶的是，银行和金融行业的蓝筹股引领了下跌。道琼斯指数的**摩根大通** （[JPM](https://research.investors.com/quote.aspx?symbol=JPM)） 和**旅行者** （[TRV](https://research.investors.com/quote.aspx?symbol=TRV)） 均下跌超过 1%。这两个组件也都取消了他们的 21 天线。
 
 
 Amid these declines, it was somewhat puzzling to see smaller issues actually thrive on Monday. The Russell 2000 gained 0.5%, while the S&P MidCap 400 eked out a 0.3% rise.  
@@ -175,22 +175,26 @@ That action triggered a [profit-taking sell rule](https://www.investors.com/how-
 *请在 X/Twitter 上关注 Chung：*[*@saitochung*](https://twitter.com/SaitoChung) *和* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
 
 
-**YOU MIGHT ALSO LIKE:**
+**YOU MIGHT ALSO LIKE: 您可能还喜欢：**
 
 
-[The Latest IBD Podcast](https://get.investors.com/podcast/?src=A00511A)
+[The Latest IBD Podcast 最新的 IBD 播客](https://get.investors.com/podcast/?src=A00511A)
 
 
-[How To Find Winning Growth Stocks: Search These Lists First](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[How To Find Winning Growth Stocks: Search These Lists First  
+如何找到获胜的成长型股票：首先搜索这些列表](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Investor's Corner: How To Use The RS Line Blue Dot Indicator](https://www.investors.com/stock-lists/ibd-50/winning-stocks-and-bullish-blue-dots/)
+[Investor's Corner: How To Use The RS Line Blue Dot Indicator  
+投资者专区：如何使用 RS Line 蓝点指标](https://www.investors.com/stock-lists/ibd-50/winning-stocks-and-bullish-blue-dots/)
 
 
-[Want To Learn How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/)
+[Want To Learn How To Pick Great Stocks? Read Investor's Corner  
+想学习如何挑选优质股票吗？阅读投资者专区](https://www.investors.com/category/how-to-invest/investors-corner/)
 
 
-[The Latest In IBD Videos](https://www.investors.com/ibd-videos)
+[The Latest In IBD Videos  
+最新的 IBD 视频](https://www.investors.com/ibd-videos)
 
 
 
