--- a/_columns/The_Big_Picture/zh-cn/2024-11-06.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-06.md
@@ -29,7 +29,7 @@ The stock market made history, too: The S&P 500 and Russell 2000 had their best 
 
 
 Volume was the highest since the Nov. 20 triple witching session. Trading swelled 68% on the NYSE and rose 15% on the Nasdaq, making Wednesday's index gains analogous to a [follow-through rally confirmation](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/). It effectively ended a soft patch that clouded the stock market heading into Election Day.  
-交易量是自 11 月 20 日三重巫术会议以来的最高水平。纽约证券交易所的交易上涨了 68%，纳斯达克的交易上涨了 15%，这使得周三的指数上涨类似于[后续的反弹确认](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/)。它有效地结束了在选举日之前给股市蒙上阴影的疲软时期。
+交易量是自 11 月 20 日三重巫术会议以来的最高水平。纽约证券交易所的交易上涨了 68%，纳斯达克的交易上涨了 15%，这使得周三的指数上涨类似于[后续的反弹确认](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/)。它有效地结束了在选举日之前给股市蒙上阴影的疲软。
 
 
 Breadth was positive but not as much as the index gains would have you think. Advancers outnumbered decliners on the NYSE by an 8-to-5 ratio and by about 9-to-5 on the Nasdaq, according to FactSet.  
