--- a/_columns/The_Big_Picture/zh-cn/2024-11-07.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-07.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Nasdaq, S&P 500 Rise To Record Highs As Fed Cuts Rates; Amazon, Broadcom Among Stocks To Watch	纳斯达克，标准普尔 500 指数升至历史新高，因为美联储降息;亚马逊、博通成为值得关注的股票之一
+  Nasdaq, S&P 500 Rise To Record Highs As Fed Cuts Rates; Amazon, Broadcom Among Stocks To Watch	纳斯达克，标准普尔 500 指数升至历史新高，因为美联储降息;亚马逊、博通是值得关注的股票之一
 date: 2024-11-07 17:57 -0800
 author: SCOTT LEHTONEN
 ---
