--- a/_columns/The_Big_Picture/zh-cn/2024-11-08.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-08.md
@@ -112,8 +112,8 @@ On the flip side, TV stocks, computer networking plays, solar energy companies a
 这是沃伦·巴菲特 （Warren Buffett） 的终极股票，但您应该购买它吗？](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
 
 
-[Trump Rally Runs On; Five Stocks Near Buy Points  
-特朗普的集会继续;靠近 Buy Points 的五只股票](https://www.investors.com/market-trend/stock-market-today/trump-rally-runs-on-tesla-palantir-fly-nvidia-meta-buy-points/)
+[Trump Rally: Bitcoin Soars, 5 Stocks Near Buy Points  
+特朗普反弹：比特币飙升，5 只股票接近买入点](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-bitcoin-80000-trump-rally-nvidia-meta-buy-points/)
 
 
 
