--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-08.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-08.md
@@ -26,16 +26,14 @@ The impact of generative artificial intelligence on the internet search advertis
 
 
 
-Google Stock All-Time High谷歌股票历史新高
-----------------------------------
+Google Stock All-Time High
+--------------------------
 
 
-Google stock hit an all-time high of 191.75 on July 10. But Alphabet stock swooned, pulling back along with most of the [Magnificent Seven](https://www.investors.com/research/magnificent-seven-stocks/) amid a market rotation out of the technology sector.  
-谷歌股票在 7 月 10 日创下 191.75 的历史新高。但 Alphabet 股票暴跌，在科技板块市场轮动的情况下，它与 [Magnificent Seven](https://www.investors.com/research/magnificent-seven-stocks/) 的大部分股票一起回落。
+Google stock hit an all-time high of 191.75 on July 10. But Alphabet stock swooned, pulling back along with most of the [Magnificent Seven](https://www.investors.com/research/magnificent-seven-stocks/) amid a market rotation out of the technology sector.  
 
 
-The company's Relative Strength rating currently stands at 71 out of a best-possible 99, according to [IBD Stock Checkup](https://research.investors.com/stockcheckup.aspx). The best stocks tend to have an RS rating of 80 or better.  
-根据 [IBD Stock Checkup](https://research.investors.com/stockcheckup.aspx) 的数据，该公司的相对强度评级目前为 71 分（满分 99 分）。最好的股票往往具有 80 或更高的 RS 评级。
+The company's Relative Strength rating currently stands at 71 out of a best-possible 99, according to [IBD Stock Checkup](https://research.investors.com/stockcheckup.aspx). The best stocks tend to have an RS rating of 80 or better.  
 
 
 Google stock holds an [Accumulation/Distribution Rating](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-accumulation-distribution-rating-shows-professionals-moves/)of B. That institutional ownership rating analyzes price and volume changes in a stock over the past 13 weeks of trading. A+ signifies heavy institutional buying; E means heavy selling. Think of a C grade as neutral.  
