--- a/_columns/The_Big_Picture/zh-cn/2024-11-11.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-11.md
@@ -184,10 +184,12 @@ IBD 大盘股 20 内部](https://research.investors.com/stock-lists/big-cap-20/)
 通过 IBD 最严格的筛选找到最佳成长型股票](https://research.investors.com/stock-lists/sector-leaders)
 
 
-[Want More Options Trading Strategies? Go Here](https://www.investors.com/category/research/options/) 
+[Want More Options Trading Strategies? Go Here  
+想要更多期权交易策略？转到此处](https://www.investors.com/category/research/options/)
 
 
-[Why The 21-Day Exponential Moving Average Matters](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) 
+[Why The 21-Day Exponential Moving Average Matters  
+为什么 21 天指数移动平均线很重要](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)
 
 
  
