--- a/_columns/The_Big_Picture/zh-cn/2024-11-12.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-12.md
@@ -49,7 +49,7 @@ Volume was lower on both main exchanges. Decliners beat advancers on the Nasdaq 
 
 
 On a day that saw the market-cap weighted S&P 500 drop 0.3%, the Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) confirmed the weak breadth with a decline of 0.8%. The homepage of [MarketSurge.com](https://marketsurge.investors.com) showed 166 stocks rose in heavy volume, while 756 fell in strong turnover.  
-在市值加权标准普尔 500 指数下跌 0.3% 的一天，景顺标准普尔 500 等权重 ETF （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 以下跌 0.8% 的幅度确认了疲软的广度。[MarketSurge.com](https://marketsurge.investors.com) 的主页显示，166 只股票大幅上涨，而 756 只股票成交量强劲。
+在市值加权标准普尔 500 指数下跌 0.3% 的一天，景顺标准普尔 500 等权重 ETF （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 以下跌 0.8% 确认了疲软的广度。[MarketSurge.com](https://marketsurge.investors.com) 的主页显示，166 只股票大幅上涨，而 756 只股票成交量强劲。
 
 
 
