--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-06.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-06.md
@@ -13,7 +13,7 @@ author: KIT NORTON
 
 
 **Fair Isaac** ([FICO](https://research.investors.com/quote.aspx?symbol=FICO)) is Wednesday's [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/) as the credit-scoring services firm and S&P 500 component broke out above a buy point ahead of reporting fiscal fourth-quarter earnings and revenue after the market closed Wednesday.  
-**Fair Isaac** （[FICO）](https://research.investors.com/quote.aspx?symbol=FICO) 是周三的 [IBD 每日股票](https://www.investors.com/category/research/ibd-stock-of-the-day/)，因为这家信用评分服务公司和标准普尔 500 指数成分股在周三收盘后报告第四财季收益和收入之前突破了买入点。
+**Fair Isaac** （[FICO）](https://research.investors.com/quote.aspx?symbol=FICO) 是周三的 [IBD 每日股票](https://www.investors.com/category/research/ibd-stock-of-the-day/)，因为这家信用评分服务公司和标准普尔 500 指数成分股在周三收盘后公布第四财季收益和收入之前突破了买入点。
 
 
 Montana-based Fair Isaac is an analytics software company, best known for its FICO score — a measure of consumer credit risk used by consumer lenders in the U.S. The company's two operating segments are "scores" and "software."  
