--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-07.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-07.md
@@ -27,7 +27,7 @@ Hoka 品牌销售额飙升近 35% 至 5.709 亿美元。UGG 销售额增长 13% 
 
 
 Deckers guided to a 12% increase in 2025 sales, to $4.8 billion. The company forecasts earnings ranging from $5.15 to $5.25 per share, up from $4.86 per share last year. The consensus view among analysts polled by FactSet calls for 2025 earnings of $5.36 per share on $4.83 billion in sales.  
-Deckers 预计 2025 年的销售额增长 12%，达到 48 亿美元。该公司预计收益为每股 5.15 美元至 5.25 美元，高于去年的每股 4.86 美元。FactSet 调查的分析师一致认为，2025 年的销售额为 48.3 亿美元，每股收益为 5.36 美元。
+Deckers 预计 2025 年的销售额增长 12%，达到 48 亿美元。该公司预计每股收益为 5.15 美元至 5.25 美元，高于去年的每股 4.86 美元。FactSet 调查的分析师一致认为，2025 年的销售额为 48.3 亿美元，每股收益为 5.36 美元。
 
 
 For Deckers' third quarter, FactSet expects earnings to slide 2% to $2.52 per share. Analysts predict a 9% increase in revenue, to $1.7 billion.  
