--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-12.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-12.md
@@ -31,11 +31,11 @@ Still, Heico's roughly 36% gain in 2024 through the beginning of August was enou
 
 
 **Berkshire Hathaway** ([BRKB](https://research.investors.com/quote.aspx?symbol=BRKB)), [Warren Buffett's investment firm, bought shares of Heico](https://www.investors.com/news/warren-buffett-q2-2024-stock-buys-sells-berkshire-hathaway-13f/) and **Ulta Beauty** ([ULTA](https://research.investors.com/quote.aspx?symbol=ULTA)) during the second quarter, according to the fund's regulatory filings tracked by [whalewisdom.com](https://whalewisdom.com/filer/berkshire-hathaway-inc).  
-根据 [whalewisdom.com](https://whalewisdom.com/filer/berkshire-hathaway-inc) 跟踪的该基金的监管文件，[沃伦·巴菲特的投资公司](https://www.investors.com/news/warren-buffett-q2-2024-stock-buys-sells-berkshire-hathaway-13f/)**伯克希尔·哈撒韦**公司 （[BRKB）](https://research.investors.com/quote.aspx?symbol=BRKB) 在第二季度购买了 Heico 和 **Ulta Beauty** （[ULTA](https://research.investors.com/quote.aspx?symbol=ULTA)） 的股票。
+根据 [whalewisdom.com](https://whalewisdom.com/filer/berkshire-hathaway-inc) 跟踪的该基金的监管文件，[沃伦·巴菲特 （Warren Buffett） 的投资公司](https://www.investors.com/news/warren-buffett-q2-2024-stock-buys-sells-berkshire-hathaway-13f/)**伯克希尔哈撒韦**公司 （[BRKB）](https://research.investors.com/quote.aspx?symbol=BRKB) 在第二季度购买了 Heico 和 **Ulta Beauty** （[ULTA](https://research.investors.com/quote.aspx?symbol=ULTA)） 的股票。
 
 
 Berkshire purchased 1.044 million shares of HEI in Q2 at around 165 per share, with a market value of over $185.37 million, whalewisdom data shows. Still, Heico only makes up 0.07% of Berkshire's portfolio. **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) dominates as the top holding at 31%, even after Buffett halved his holdings during the quarter. **American Express** ([AXP](https://research.investors.com/quote.aspx?symbol=AXP)) and **Bank of America** ([BAC](https://research.investors.com/quote.aspx?symbol=BAC)) rank second and third, representing 12.9% and 11.9% of the portfolio, respectively.  
-whalewisdom 的数据显示，伯克希尔在第二季度以每股 165 股左右的价格购买了 104.4 万股 HEI，市值超过 1.8537 亿美元。尽管如此，Heico 仅占伯克希尔投资组合的 0.07%。**苹果** （[AAPL）](https://research.investors.com/quote.aspx?symbol=AAPL) 以 31% 的持股占据主导地位，即使在巴菲特在本季度将持股减半之后也是如此。**美国运通** （[AXP](https://research.investors.com/quote.aspx?symbol=AXP)） 和美国**银行** （[BAC](https://research.investors.com/quote.aspx?symbol=BAC)） 排名第二和第三，分别占投资组合的 12.9% 和 11.9%。
+whalewisdom 的数据显示，伯克希尔在第二季度以每股 165 股左右的价格购买了 104.4 万股 HEI，市值超过 1.8537 亿美元。尽管如此，Heico 仅占伯克希尔投资组合的 0.07%。**苹果** （[AAPL）](https://research.investors.com/quote.aspx?symbol=AAPL) 以 31% 的持股占据主导地位，即使在巴菲特在本季度将其持股减半之后也是如此。**美国运通** （[AXP](https://research.investors.com/quote.aspx?symbol=AXP)） 和美国**银行** （[BAC](https://research.investors.com/quote.aspx?symbol=BAC)） 排名第二和第三，分别占投资组合的 12.9% 和 11.9%。
 
 
 For Heico's upcoming Q4 results, FactSet analysts expect earnings to increase 32% to 98 cents per share on 10.5% revenue growth to $1.03 billion, which would mark a quarterly record.  
