--- a/_columns/The_Big_Picture/zh-cn/2024-11-08.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-08.md
@@ -32,12 +32,11 @@ The Dow Jones Industrial Average tested the 44,000 level and closed at fresh hei
 道琼斯工业平均指数测试了 44,000 点水平，在周五上涨 0.6% 后收于新高。这里的大新闻是 **Nvidia** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 首次亮相，因为它取代**了 Intel** （[INTC](https://research.investors.com/quote.aspx?symbol=INTC)） 在备受赞誉的指数中。这是 AI 股票的一次略带耻辱的首次亮相，当天收盘下跌 0.8%。
 
 
-Small caps outperformed on the stock market, with the Russell 2000 rising 0.7% Friday and turning in a muscular 8.7% weekly lift. It was its best week since April 2020. The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) jumped 3.2% for the day and surged 11.5% for the week.  
-小盘股在股市上表现出色，罗素 2000 指数周五上涨 0.7%，周线上涨 8.7%。这是自 2020 年 4 月以来最好的一周。Innovator IBD 50 ETF （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 当天上涨 3.2%，本周飙升 11.5%。
+Small caps outperformed on the stock market, with the Russell 2000 rising 0.7% Friday and turning in a muscular 8.7% weekly lift. It was its best week since April 2020. The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) jumped 3.2% for the day and surged 11.5% for the week.  
 
 
-Trump Rally Continues, But Inflation Data Looms特朗普的反弹仍在继续，但通胀数据迫在眉睫
--------------------------------------------------------------------
+Trump Rally Continues, But Inflation Data Looms
+-----------------------------------------------
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/11/MP110824-287x300.jpg)Stocks rallied furiously the past week as the election results removed a key overhang. And with President-elect Trump expected to pursue pro-growth policies, such as loosening policy on dealmaking, further gains could be in store. The latest Fed meeting was also benign.  
@@ -48,12 +47,10 @@ However, the coming week will see a fresh inflation reading, and negative news o
 然而，未来一周将看到新的通胀数据，这方面的负面消息可能会给股市多头暂停的理由。[根据 Econoday 的数据](https://research.investors.com/economic-calendar/)，10 月份的消费者价格指数周三下跌，整体 CPI 同比增长 2.4%。这与之前的读数相同。剔除食品和能源的核心 CPI 预计将保持稳定，年化增长率为 3.3%。
 
 
-Producer price index data will be released Thursday, with economists expecting a year-over-year gain of 1.8% in the headline data. Other noteworthy economic reports include U.S. retail sales data, which drops Friday. This should give additional insight into the health of the all-important American consumer.  
-生产者价格指数数据将于周四公布，经济学家预计整体数据同比增长 1.8%。其他值得注意的经济报告包括美国零售销售数据，该数据周五下降。这应该可以更深入地了解最重要的美国消费者的健康状况。
+Producer price index data will be released Thursday, with economists expecting a year-over-year gain of 1.8% in the headline data. Other noteworthy economic reports include U.S. retail sales data, which drops Friday. This should give additional insight into the health of the all-important American consumer.  
 
 
-There are also a few [noteworthy earnings reports in the coming week](https://www.investors.com/research/earnings-preview/cava-stock-shopify-cisco-systems-rally-earnings-reports/). These include [Leaderboard Watchlist](https://get.investors.com/leaderboard/) name **Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)), **Shopify** ([SHOP](https://research.investors.com/quote.aspx?symbol=SHOP)), **Cisco Systems** ([CSCO](https://research.investors.com/quote.aspx?symbol=CSCO)) and **Walt Disney** ([DIS](https://research.investors.com/quote.aspx?symbol=DIS)).  
-[未来一周还有一些值得注意的收益报告](https://www.investors.com/research/earnings-preview/cava-stock-shopify-cisco-systems-rally-earnings-reports/)。其中包括[排行榜观察名单](https://get.investors.com/leaderboard/)名称 **Cava** （[CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)）、**Shopify** （[SHOP](https://research.investors.com/quote.aspx?symbol=SHOP)）、**Cisco Systems** （[CSCO）](https://research.investors.com/quote.aspx?symbol=CSCO) 和 **Walt Disney** （[DIS](https://research.investors.com/quote.aspx?symbol=DIS)）。
+There are also a few [noteworthy earnings reports in the coming week](https://www.investors.com/research/earnings-preview/cava-stock-shopify-cisco-systems-rally-earnings-reports/). These include [Leaderboard Watchlist](https://get.investors.com/leaderboard/) name **Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)), **Shopify** ([SHOP](https://research.investors.com/quote.aspx?symbol=SHOP)), **Cisco Systems** ([CSCO](https://research.investors.com/quote.aspx?symbol=CSCO)) and **Walt Disney** ([DIS](https://research.investors.com/quote.aspx?symbol=DIS)).  
 
 
 Tesla Retakes $1 Trillion Level特斯拉重回 1 万亿美元大关
@@ -89,11 +86,10 @@ On the flip side, TV stocks, computer networking plays, solar energy companies a
 请关注 Michael Larkin 在 X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) 上的更多分析。*
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[This Stock Surges As AI Powers Red-Hot Demand  
-随着 AI 推动炙手可热的需求，该股飙升](https://www.investors.com/research/the-new-america/vertiv-stock-ai-data-center-nvidia-vrt/)
+[This Stock Surges As AI Powers Red-Hot Demand](https://www.investors.com/research/the-new-america/vertiv-stock-ai-data-center-nvidia-vrt/) 
 
 
 [Lithium Has Bottomed. What To Expect From These Stocks  
