--- a/_columns/The_Big_Picture/zh-cn/2024-11-11.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-11.md
@@ -171,7 +171,7 @@ One area to watch within the stock market? Eye signs of excessive optimism. Are 
 
 
 [Margin debt in September](https://research.investors.com/psychological-market-indicators/chart?type=margindebt) grew 19% vs. year ago levels. That's clear evidence that the animal spirits are rising. Yet it's nowhere near levels seen in March 2021, when the amount of money borrowed by investors to speculate in stocks shot to 71%.  
-[9 月份的保证金债务](https://research.investors.com/psychological-market-indicators/chart?type=margindebt)与去年同期相比增长了 19%。这是动物精神正在崛起的明显证据。然而，这与 2021 年 3 月的水平相去甚远，当时投资者为投机股票而借入的资金量飙升至 71%。
+[9 月份的保证金债务](https://research.investors.com/psychological-market-indicators/chart?type=margindebt)与去年同期相比增长了 19%。这是动物精神正在崛起的明确证据。然而，这与 2021 年 3 月的水平相去甚远，当时投资者为投机股票而借入的资金量飙升至 71%。
 
 
 As noted on the chart, IBD states that the "year-over-year percentage change in margin debt can help flag major tops in bull markets. This contrarian sentiment indicator will exceed 55% when optimism runs rampant on Wall Street and investors are heavily borrowing money during the late stages of a bull market."  
