--- a/_columns/Swing_Trading/zh-cn/2024-11-08.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-08.md
@@ -12,7 +12,7 @@ author: JUSTIN NIELSEN
 
 
 Sticking with a position can be difficult as stocks climb a wall of worry. With the election, Fed meetings and an earnings season with 15%+ moves going either way, there's been reason for caution with individual stocks. That's why sometimes we'll lean heavier on a market ETF like the SPDR S&P 500 or related ETFs.  
-随着股票攀升担忧之墙，坚持一个头寸可能很困难。随着大选、美联储会议和财报季的 15%+ 波动，有理由对个股持谨慎态度。这就是为什么有时我们会更倾向于像 SPDR S&P 500 这样的市场 ETF 或相关 ETF。
+随着股票攀升担忧之墙，坚持一个头寸可能很困难。随着大选、美联储会议和 15%+ 波动的财报季，有理由对个股持谨慎态度。这就是为什么有时我们会更倾向于像 SPDR S&P 500 这样的市场 ETF 或相关 ETF。
 
 
 Specifically, we'll get leveraged counterparts like the **2X ProShares Ultra S&P 500** ([SSO](https://research.investors.com/quote.aspx?symbol=SSO)). That gives us profit potential closer to that of an individual stock without the news risk that can slam a company's shares.  
